# easyhtml

./: Convert.hs  HUnitDiff.hs  Parser.hs  Unit.hs  htmlpre.cabal
tests/: HeaderNav.ejs  HeaderNav.js  django-admin-login.ehtml  django-admin-login.html  smart1.ehtml  smart1.html  smart2.ehtml  smart2.html  test1.ehtml  test1.html
